; ModuleID = '/home/carl/AnghaBench/linux/drivers/mfd/extr_kempld-core.c_kempld_read8.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/mfd/extr_kempld-core.c_kempld_read8.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.kempld_device_data = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @kempld_read8(%struct.kempld_device_data* %0, i32 %1) #0 {
  %3 = alloca %struct.kempld_device_data*, align 8
  %4 = alloca i32, align 4
  store %struct.kempld_device_data* %0, %struct.kempld_device_data** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  %6 = load %struct.kempld_device_data*, %struct.kempld_device_data** %3, align 8
  %7 = getelementptr inbounds %struct.kempld_device_data, %struct.kempld_device_data* %6, i32 0, i32 1
  %8 = load i32, i32* %7, align 4
  %9 = call i32 @iowrite8(i32 %5, i32 %8)
  %10 = load %struct.kempld_device_data*, %struct.kempld_device_data** %3, align 8
  %11 = getelementptr inbounds %struct.kempld_device_data, %struct.kempld_device_data* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = call i32 @ioread8(i32 %12)
  ret i32 %13
}

declare dso_local i32 @iowrite8(i32, i32) #1

declare dso_local i32 @ioread8(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
